# forecast-bear

./: README.md  main.py  pyproject.toml
Data/: Saison 23_24.xlsx
Data/data_v1/: combined_saison_data.csv  features  grizzlys_combined_schedule_sales_v3.csv  grizzlys_engineered_features.csv  opponent_encoding.json  season_tickets.csv  spielplan_Grizzlys_only_final_cleaned_v3.csv  spielplan_combined.csv
Data/raw_data/: Saison 24_25.xlsx
Data/schedule_csv/: Grizzlys_Schedule_22_23.csv  Grizzlys_Schedule_23_24.csv  Grizzlys_Schedule_24_25.csv  Grizzlys_Schedule_25_26.csv
Data/schedule_weather_csv/: Weather_Schedule_22_23.csv  Weather_Schedule_23_24.csv  Weather_Schedule_24_25.csv
Models/baseline_model/: baseline_model_results.csv  best_model_random_forest.joblib  feature_scaler.joblib
Models/baseline_model_v2/: baseline_model_results_v2.csv  best_model_random_forest_v2.joblib  (+1 more)
Notebooks/: 01_data_preprocessing.ipynb  02_combine_data_sources.ipynb  03_feature_engineering.ipynb  04_feature_engineering.ipynb  04b_feature_engineering_weather.ipynb  05_baseline_model_training.ipynb  06_baseline_model_v2.ipynb  07_baseline_model_v3.ipynb  08_baseline_model_v4.ipynb  09_baseline_model_v5.ipynb  10_baseline_model_v6.ipynb  11_baseline_model_v7.ipynb  12_baseline_model_v8.ipynb  14_final_model_preprocessing_pipeline.ipynb  15_best_model_prediction_for_24-25_plots.ipynb  temp.ipynb  temp2.ipynb  temp3.ipynb
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
frontend/: README.md  index.html  llms.txt  middleware.ts  package.json  pnpm-lock.yaml
(+178 files in other folders)
